[package]
name = "main"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ranktest = { path = "../ranktest" }
rankcorcoef = { path = "../rankcorcoef" }

[lib]
name = "ranktest"
path = "../ranktest/src/lib.rs"
crate-type = ["cdylib"]